# prototypes

./: .gitignore  ProjectEuler.code-workspace
BBCMicro/: Coding.dsd
BlitzMax/HullPoints/: .gitignore
C#/Fallen Worlds/: 070203 Fallen Worlds.rar  070204 Fallen Worlds.rar  070205 Fallen Worlds.rar  Fallen Worlds.csproj  Project A.sln
C++/Dork/: CMakeLists.txt  conan-build.sh  conan.sh  conan_imports_manifest.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
C++/Dork/Examples/: test.dork
C++/Dork/Scratch/: Source.txt
C++/Dork/Source/: main.cpp
C++/Dork/Source/Compiler/: Compiler.cpp  Compiler.h  CompilerCore.cpp  CompilerExpression.cpp  CompilerLiteral.cpp  CompilerMethodCall.cpp  CompilerStatement.cpp
C++/Dork/Source/Compiler/Grammar/: Dork.g4  DorkBaseVisitor.cpp  DorkBaseVisitor.h  DorkLexer.cpp  DorkLexer.h  DorkParser.cpp  DorkParser.h  DorkVisitor.cpp  DorkVisitor.h  build-grammar.sh
C++/Dork/Source/Exception/: DorkException.h
C++/Dork/Source/UI/: UI.cpp  UI.h
C++/Dork/Source/VM/: Class.cpp  Class.h  Clazz.cpp  Instance.cpp  Instance.h  Method.cpp  Method.h  Object.cpp  Object.h  VM.cpp  VM.h
C++/Dork/Source/World/: Entity.cpp  Entity.h  Physics.cpp  Physics.h  Shape.cpp  Shape.h  World.cpp  World.h
C++/Dork/Source/World/Shapes/: Shape.cpp  Shape.h
C++/DorkLanguage/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
C++/GenerationShip/: Design.pages  GenerationShip.sublime-project  GenerationShip.sublime-workspace
C++/OPA/: CMakeLists.txt  main.cpp
C++/Scheduler/: CMakeLists.txt  main.cpp
C/Zoingy/: build.sh  loader
Clojure/FleetCommand/: project.clj
Clojure/Planner/: project.clj
Clojure/Startup/: .gitignore  Mindmap.mm  Player.mindnode  Procfile  project.clj  upload.sh
Clojure/Tinker/: project.clj
CoffeeScript/CriticalAscendent/: CriticalAscendant.html
Crystal/: testing.cr
FlexBisonAntlr/flexbison/: bbcbasic.l  bbcbasic.output  bbcbasic.tab.c  bbcbasic.tab.h  bbcbasic.y  build.sh  lex.yy.c  test
Go/Obsidian/: main.go
Godot/BIOS/: project.godot
Godot/LittlePeople/: .gitignore  Little People.pck  export_presets.cfg  project.godot
Haskell/PearlsBook/: 1.hs  2.hs
Haskell/Phoebus/: Pheobus.cabal
Haskell/Planner/: Main.hs  Planner.cabal
Haskell/Planner/App/DataGenerator/: Generate.hs
Haskell/Planner/App/Schema/: Schedule.hs
Haskell/Planner/App/Shared/: Geocoder.hs
Haskell/Tinker/: Main.hs  Tinker.cabal
JS/HullPoints/: package-lock.json  package.json  tsconfig.json  webpack.config.js
Java/BIOS/: .gitignore  build.xml
Java/Cirrus/: build.sbt
Java/Finite/: build.xml
Java/Infection/: build.xml
Java/LittlePeople/: .gitignore  graal.sh
Java/Obsidian/: build.xml
Java/TheCorolisSector/: .gitignore  build.xml  manifest.mf  profile.csv
Love/HullPoints/: conf.lua  main.lua  ship.lua  system.lua
Love/SmallWorld/: main.lua
Monkey-X/Annihilation/: Globals.monkey  Input.monkey  annihilation.monkey
Monkey-X/GenerationShip/: Ship.monkey  g-ship.monkey
Monkey-X/SmallWorld/: Globals.monkey  smallworld.monkey
Monkey-X/SpaceShipArchitect/: ssa.monkey
Monkey-X/System/: Glfw2.monkey
O'Caml/Flight Sim/: README.md  build.sh  main.ml
ProjectEuler/: Cargo.toml
ProjectEuler/src/: archive20.rs  main.rs
Python/: Hull Points Python.code-workspace  PicDownloader.py  SkinDetector.py
Python/HullPointsPy/: main.py
Python/Obpysidian/: obpsyidian.py
RISC OS/: !DestinationGolle
Ruby/FlightSim/: player.rb  (+2 more)
Rust/: BIOS.code-workspace  HullPoints (Rust).code-workspace  LittlePeople.code-workspace  VoxelTracer.code-workspace
(+833 files in other folders)
