name:           Pheobus
version:        0.1.0.0
cabal-version:  >=1.8
build-type:     Simple
maintainer:     daryljdudey@googlemail.com
author:         Daryl Dudey
 
executable pheobus
    build-depends:    base ==4.5.*
    main-is:          Main.hs
    buildable:        True
    hs-source-dirs:   src
    ghc-options:      -Wall -O2
 