name:           Tinker
version:        0.1.0.0
cabal-version:  >=1.8
build-type:     Simple
maintainer:     daryljdudey@googlemail.com
description:  
author:         Daryl Dudey
 
executable tinker
    build-depends:    base ==4.5.*, gloss >= 1.7.5.2
    main-is:          Main.hs
    buildable:        True
    hs-source-dirs:   .
    ghc-options:      -Wall -O2
 